# F-PRIMO

./: Cargo.toml  README  README.md
src/: ipa.rs  kzg.rs  lib.rs  main.rs  part1.rs  part2.rs  types.rs  utils.rs
