[package]
name = "F-PRIMO"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { version = "0.4", features = ["curve"] }
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
rayon = "1.7"
num_cpus = "1.16"